--- a/css/login2.css
+++ b/css/login2.css
@@ -196,3 +196,16 @@ button.ghost {
     opacity: 1;
     z-index: 5;
 }
+
+/*Mover overlay a la derecha*/
+.container.right-panel-active .overlay {
+    transform: translateX(50%);
+}
+
+.container.right-panel-active .overlay-left {
+    transform: translateX(0);
+}
+
+.container.right-panel-active .overlay-right {
+    transform: translateX(20%);
+}
