--- a/css/login2.css
+++ b/css/login2.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 
+/*Básico*/
 * {
     box-sizing: border-box;
 }
@@ -8,7 +9,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     background-color: #f6f5f7;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -37,17 +38,6 @@ a {
     font-size: 14px;
     text-decoration: none;
     margin: 15px 0;
-}
-
-.container {
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-    position: relative;
-    overflow: hidden;
-    width: 768px;
-    max-width: 100%;
-    min-height: 400px;
 }
 
 .form-container form {
@@ -110,6 +100,18 @@ button.ghost {
     border-color: white;
 }
 
+/*Container*/
+.container {
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    position: relative;
+    overflow: hidden;
+    width: 768px;
+    max-width: 100%;
+    min-height: 400px;
+}
+
 .form-container {
     position: absolute;
     top: 0;
@@ -130,6 +132,8 @@ button.ghost {
     z-index: 1;
 }
 
+
+/*Overlay*/
 .overlay-container {
     position: absolute;
     top: 0;
@@ -145,7 +149,7 @@ button.ghost {
     background: rgb(16, 96, 127);
     background: linear-gradient(to right, rgb(91, 195, 236), rgb(13, 82, 109)) no-repeat 0 0 / cover;
     color: white;
-    position: relative;
+    position: absolute;
     left: -100%;
     height: 100%;
     width: 200%;
@@ -195,6 +199,7 @@ button.ghost {
     transform: translateX(100%);
     opacity: 1;
     z-index: 5;
+    animation: show 0.6s;
 }
 
 /*Mover overlay a la derecha*/
@@ -208,4 +213,104 @@ button.ghost {
 
 .container.right-panel-active .overlay-right {
     transform: translateX(20%);
+}
+
+@media screen and (max-width: 850px) {
+
+    main {
+        margin: -20px 0 50px;
+    }
+
+    .container {
+        width: 400px;
+        height: 768px;
+    }
+
+    .sign-in-container {
+        top: 0;
+        height: 50%;
+        width: 100%;
+        z-index: 2;
+    }
+
+    .sign-up-container {
+        top: 0;
+        height: 50%;
+        width: 100%;
+        opacity: 0;
+        z-index: 1;
+    }
+
+    .overlay-container {
+        position: relative;
+        left: -50%;
+        width: 100%;
+        height: 50%;
+        overflow: hidden;
+        transition: transform 0.6s ease-in-out;
+        z-index: 100;
+    }
+
+    .overlay {
+        background: linear-gradient(to bottom, rgb(91, 195, 236), rgb(13, 82, 109)) no-repeat 0 0 / cover;
+        left: 100%;
+        height: 100%;
+        width: 200%;
+        transform: translateY(0);
+        transition: transform 0.6s ease-in-out;
+    }
+
+    .overlay-panel {
+        margin: 0;
+        height: 50%;
+        width: 100%;
+        flex-direction: column;
+        position: relative;
+        transform: translateY(0);
+        transition: transform 0.6s ease-in-out;
+    }
+
+    .overlay-right {
+        top: 0;
+        transform: translateY(0);
+    }
+
+    .overlay.left {
+        transform: translateY(-20%);
+    }
+
+
+    /*Animaciones*/
+
+    /* Para mover el Inicio Sesión a la derecha*/
+
+    .container.right-panel-active .sign-in-container {
+        transform: translateY(100%);
+    }
+
+    /*Mover overlay a la izq*/
+    .container.right-panel-active .overlay-container {
+        transform: translateY(-100%);
+    }
+
+    /* Registro sobre Inicio de Sesion */
+    .container.right-panel-active .sign-up-container {
+        transform: translateY(100%);
+        opacity: 1;
+        z-index: 5;
+        animation: show 0.6s;
+    }
+
+    /*Mover overlay a la derecha*/
+    .container.right-panel-active .overlay {
+        transform: translateY(50%);
+    }
+
+    .container.right-panel-active .overlay-left {
+        transform: translateY(0);
+    }
+
+    .container.right-panel-active .overlay-right {
+        transform: translateY(20%);
+    }
 }
