se implemento la busqueda por precio y por nombre en catalogo

--- a/css/index1.css
+++ b/css/index1.css
@@ -821,3 +821,10 @@ ul {
 .centrar {
     text-align: center;
 }
+
+/*boton*/
+.borrar-borde {
+    border: none;
+    background-color: white;
+    margin-left: 20px;
+}
