--- a/css/w3-theme-pink.css
+++ b/css/w3-theme-pink.css
@@ -7,7 +7,7 @@
 .w3-theme-d2 {color:#fff !important; background-color:#66bde6 !important}
 .w3-theme-d3 {color:#fff !important; background-color:#5ab2da !important}
 .w3-theme-d4 {color:#fff !important; background-color:#4da8cf !important}
-.w3-theme-d5 {color:#fff !important; background-color:#409dc4 !important}
+.w3-theme-d5 {color:#000 !important; background-color:#e4fcfc !important}
 
 .w3-theme-light {color:#000 !important; background-color:#fef2f6 !important}
 .w3-theme-dark {color:#fff !important; background-color:#409dc4 !important}
