Avance carrito, falta finalizar proceso compra

--- a/css/index1.css
+++ b/css/index1.css
@@ -940,3 +940,14 @@ ul {
     font-size: 0.9rem;
     color: #4b4b4b;
 }
+
+/*anchar mi cuenta link*/
+/* .anchar{
+    width: 100px;
+    /* height: 100px; */
+    /* margin-right: 50px; */
+    /* padding-right: 100px; */
+/* } */ 
+.blanco {
+    color: white;
+}
