--- a/css/login.css
+++ b/css/login.css
@@ -236,17 +236,20 @@ body {
 .ok {
     text-align: center;
     width: 100%;
-    font-weight: 400;
-    padding: 10px;
+    font-weight: 200;
+    padding: 0px;
     background-color: #1e6;
     color: #fff;
+    border-radius: 5%;
+
 }
 
 .bad {
     text-align: center;
     width: 100%;
-    padding: 10px;
+    padding: 0px;
     background-color: #a22;
     color: #fff;
-    font-weight: 400;
+    font-weight: 200;
+    border-radius: 5%;
 }
